ingress/netflix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: vivekdeployment
 namespace: vivekname
 labels: 
   app: vivekdeployment
spec:
  replicas: 1
  selector: 
    matchExpressions:
    - key: vivekdev
      operator: In
      values:
        - deep
  template:
    metadata:
      name: hunterpod
      namespace: vivekname
      labels:
        vivekdev: deep
    spec:
      containers:
      - name: huntercon
        image: devopsinsiders/netflix-clone
        ports:
        - containerPort: 80
