ingress/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-nginx
 namespace: vivekname
spec:
  selector: 
    vivekdev1: nginx1
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
