ingress/ingress-nginx.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rule
  namespace: vivekname
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.vivektiwari.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-nginx
            port:
              number: 80
